# DetectorRemoreID

./: .gitmodules  README.md  west.yml
common/include/: drone_id_types.hpp  inter_board_protocol.h
common/lib/opendroneid/: CMakeLists.txt
common/lib/opendroneid/zephyr/: module.yml
nrf54_brain/: CMakeLists.txt  prj.conf  sysbuild.cmake
nrf54_brain/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
nrf54_brain/src/: ai_engine.hpp  bme280_handler.hpp  data_aggregator.cpp  main.cpp  ui_manager.hpp
nrf54_brain/src_flpr/: hcsr04_offload.c
nrf7002_sniffer/: CMakeLists.txt  prj.conf
nrf7002_sniffer/boards/: nrf7002dk_nrf5340_cpuapp.overlay
nrf7002_sniffer/child_image/: hci_rpmsg.conf
nrf7002_sniffer/src/: ble_scanner.c  main.cpp  wifi_scanner.c
scripts/: data_logger.py  live_visualizer.py  panel_gateway.py
