# nrf7002_sniffer/CMakeLists.txt
cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(nrf7002_sniffer)

target_include_directories(app PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}/src 
    ${CMAKE_CURRENT_SOURCE_DIR}/../common/include
)

# Linkowanie z biblioteką OpenDroneID z katalogu common 
target_link_libraries(app PUBLIC opendroneid_lib)

target_sources(app PRIVATE
    src/main.cpp
    src/wifi_scanner.c
    src/ble_scanner.c
)